--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Geeta Pradhan and Pankaj</div>
+                <div class="logo">Geeta Pradhan</div>
                 <ul class="nav-links">
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
