--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geeta - Interior Designer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/hero-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <div class="cursor"></div>
+    <div class="page-transition"></div>
     
     <!-- Header -->
     <header>
@@ -37,16 +41,21 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="hero-text fade-in">
-                    <h1>Creating Spaces That Inspire</h1>
+                <div class="hero-text">
+                    <h1 class="animated-title">Creating Spaces That Inspire</h1>
                     <p>Interior Designer with a passion for transforming spaces into beautiful, functional environments.</p>
                     <a href="#portfolio" class="btn">View My Work</a>
                 </div>
-                <div class="hero-image fade-in">
-                    <div class="profile-container">
+                <div class="hero-image">
+                    <div class="profile-container parallax" data-speed="0.03">
                         <img src="images/profile.jpg" alt="Geeta - Interior Designer" class="profile-img">
                     </div>
                 </div>
+            </div>
+            <div class="hero-shapes">
+                <div class="shape shape-1 parallax" data-speed="0.05"></div>
+                <div class="shape shape-2 parallax" data-speed="0.03"></div>
+                <div class="shape shape-3 parallax" data-speed="0.07"></div>
             </div>
         </div>
     </section>
@@ -54,13 +63,13 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
+            <h2 class="section-title" data-aos="fade-up">About Me</h2>
             <div class="about-content">
-                <div class="about-text fade-in">
+                <div class="about-text" data-aos="fade-up" data-aos-delay="100">
                     <p>Hello! I'm Geeta, a passionate interior designer with a fresh perspective on creating beautiful, functional spaces. I believe that good design should be accessible to everyone and that every space has the potential to be transformed into something extraordinary.</p>
                     <p>My approach combines aesthetic beauty with practical functionality, ensuring that each design not only looks stunning but also enhances the way you live or work in your space.</p>
                     <div class="skills">
-                        <h3>Skills</h3>
+                        <h3 data-aos="fade-up" data-aos-delay="200">Skills</h3>
                         <ul class="skill-list">
                             <li>Space Planning</li>
                             <li>Color Theory</li>
@@ -78,42 +87,54 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio">
         <div class="container">
-            <h2 class="section-title">My Portfolio</h2>
+            <h2 class="section-title" data-aos="fade-up">My Portfolio</h2>
             <div class="portfolio-grid">
-                <div class="portfolio-item fade-in">
+                <div class="portfolio-item interactive-element" data-aos="fade-up" data-aos-delay="100">
                     <div class="portfolio-img">
                         <img src="images/project1.jpg" alt="Modern Living Room">
                     </div>
                     <div class="portfolio-overlay">
                         <h3>Modern Living Room</h3>
                         <p>A contemporary space designed for comfort and style.</p>
+                        <div class="view-project">
+                            <span>View Project</span>
+                        </div>
                     </div>
                 </div>
-                <div class="portfolio-item fade-in">
+                <div class="portfolio-item interactive-element" data-aos="fade-up" data-aos-delay="200">
                     <div class="portfolio-img">
                         <img src="images/project2.jpg" alt="Minimalist Kitchen">
                     </div>
                     <div class="portfolio-overlay">
                         <h3>Minimalist Kitchen</h3>
                         <p>Clean lines and functional design for the heart of the home.</p>
+                        <div class="view-project">
+                            <span>View Project</span>
+                        </div>
                     </div>
                 </div>
-                <div class="portfolio-item fade-in">
+                <div class="portfolio-item interactive-element" data-aos="fade-up" data-aos-delay="300">
                     <div class="portfolio-img">
                         <img src="images/project3.jpg" alt="Cozy Bedroom">
                     </div>
                     <div class="portfolio-overlay">
                         <h3>Cozy Bedroom</h3>
                         <p>A peaceful retreat designed for relaxation and rest.</p>
+                        <div class="view-project">
+                            <span>View Project</span>
+                        </div>
                     </div>
                 </div>
-                <div class="portfolio-item fade-in">
+                <div class="portfolio-item interactive-element" data-aos="fade-up" data-aos-delay="400">
                     <div class="portfolio-img">
                         <img src="images/project4.jpg" alt="Elegant Bathroom">
                     </div>
                     <div class="portfolio-overlay">
                         <h3>Elegant Bathroom</h3>
                         <p>Luxury and functionality combined in a serene space.</p>
+                        <div class="view-project">
+                            <span>View Project</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,21 +144,21 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Contact</h2>
-            <div class="contact-content-simple fade-in">
-                <div class="contact-item">
+            <h2 class="section-title" data-aos="fade-up">Contact</h2>
+            <div class="contact-content-simple">
+                <div class="contact-item" data-aos="zoom-in" data-aos-delay="100">
                     <i class="fas fa-envelope"></i>
                     <p>hello@geetadesign.com</p>
                 </div>
-                <div class="contact-item">
+                <div class="contact-item" data-aos="zoom-in" data-aos-delay="200">
                     <i class="fas fa-phone"></i>
                     <p>+91 98765 43210</p>
                 </div>
-                <div class="contact-item">
+                <div class="contact-item" data-aos="zoom-in" data-aos-delay="300">
                     <i class="fas fa-map-marker-alt"></i>
                     <p>Mumbai, India</p>
                 </div>
-                <div class="social-links">
+                <div class="social-links" data-aos="fade-up" data-aos-delay="400">
                     <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-pinterest"></i></a>
@@ -153,6 +174,16 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/animations.js"></script>
+    <script>
+        // Initialize AOS
+        AOS.init({
+            duration: 800,
+            easing: 'ease',
+            once: true
+        });
+    </script>
 </body>
 </html>
